methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:41: error: value droite is not a member of Unit
  droite();avance()droite();avance(9)
                   ^